tests/ui/associated-type-bounds/return-type-notation/issue-120208-higher-ranked-const.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-120208-higher-ranked-const.rs:3:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: return type notation is not allowed for functions that have const parameters
  --> $DIR/issue-120208-higher-ranked-const.rs:12:21
   |
LL |     async fn check<const N: usize>() -> bool;
   |                    -------------- const parameter declared here
...
LL |     HC: HealthCheck<check(): Send> + Send + 'static,
   |                     ^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

